# literate-garbanzo

./: CMakeLists.txt  toolchain.cmake
include/: main.hh
proto/: main.capnp
protosrc/: main.capnp.c++  main.capnp.h
src/: err.cc  main.cc
